# sl3aio

./: .gitignore  LICENSE  README.md  database.db  dataparser.py  dbcontroller.py  dbtypes.py  executor.py  main.py  pyproject.toml  table.py
docs/: .readthedocs.yaml  requirements.txt
docs/source/: changelog.rst  conf.py  executor.rst  index.rst  installation.rst  table.rst
docs/source/examples/: advanced.rst  general.rst
docs/source/examples/advanced/: custom_data_types.rst  generated_columns.rst  index.rst  inheriting_table_classes.rst  sending_requests_mannually.rst  using_executors.rst
docs/source/examples/general/: accessing_the_table.rst  creating_new_database.rst  index.rst  using_existing_database.rst
docs/source/modules/: dataparser.rst  easytable.rst  executor.rst  table.rst
src/: pktable.py
src/sl3aio/: __init__.py  _logging.py  _utils.py  dataparser.py  easytable.py  executor.py  pktable.py  table.py  test.py
src/test/: test.py  usersdata.db
test/: test.py  usersdata.db
