[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sl3aio"
dynamic = ["version"]
description = "A simple and efficient Pytohn library for asynchronous use of SQLite3 with a set of useful tools and interfaces."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["database", "development", "sqlite", "sl3", "async"]
authors = [
  {name = "Nedelis", email = "dimoshunya@gmail.com" }
]
maintainers = [
  {name = "Nedelis", email = "dimoshunya@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Database",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[tool.setuptools.dynamic]
version = {attr = "sl3aio.__version__"}

[project.urls]
"Homepage" = "https://github.com/Nedelis/sl3aio"
"Documentation" = "https://sl3aio.readthedocs.io"
"Source" = "https://github.com/Nedelis/sl3aio/master/src/sl3aio"
"Repository" = "https://github.com/Nedelis/sl3aio"
"Bug Reports" = "https://github.com/Nedelis/sl3aio/issues"
